[package]
name = "burrow-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
tun = { version = "*", path = "../tun/" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.21", features = ["rt", "rt-multi-thread", "sync", "macros"] }
